[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/sprites/char_3.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/char_1.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/spooky.ogg" type="AudioStream" id=3]
[ext_resource path="res://src/world/World.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/char_2.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/char_4.png" type="Texture" id=6]
[ext_resource path="res://assets/scenes/end.png" type="Texture" id=7]
[ext_resource path="res://assets/scenes/driver.png" type="Texture" id=8]
[ext_resource path="res://assets/font_normal_for_score.tres" type="DynamicFont" id=9]
[ext_resource path="res://src/world/HUD.gd" type="Script" id=10]
[ext_resource path="res://assets/scenes/carwindshield.png" type="Texture" id=11]
[ext_resource path="res://assets/fonts/Lycanthrope.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://assets/sprites/char_0.png" type="Texture" id=13]
[ext_resource path="res://assets/scenes/driver_normal.png" type="Texture" id=14]
[ext_resource path="res://assets/scenes/driver_happy.png" type="Texture" id=16]
[ext_resource path="res://assets/scenes/driver_sad.png" type="Texture" id=17]
[ext_resource path="res://assets/scenes/driver_angry.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 12 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "driver_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "driver_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "driver_3",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "driver_4",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "char_0",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "char_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "char_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "char_3",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "char_4",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 81
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 12 )

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="TitleScene" type="CanvasLayer" parent="."]

[node name="Carwindshield" type="Sprite" parent="TitleScene"]
position = Vector2( 528, 915 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 11 )

[node name="DriverAngry" type="Sprite" parent="TitleScene"]
position = Vector2( 520, 907 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 18 )

[node name="ColorRect" type="ColorRect" parent="TitleScene"]
margin_left = 218.0
margin_top = 401.0
margin_right = 813.0
margin_bottom = 556.0
color = Color( 0.298039, 0.298039, 0.298039, 0.878431 )

[node name="TitleLabel" type="Label" parent="TitleScene"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -254.5
margin_top = 35.0
margin_right = 254.5
margin_bottom = 161.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "DeadLyft"

[node name="ColorRect2" type="ColorRect" parent="TitleScene"]
margin_left = 157.0
margin_top = 640.0
margin_right = 889.0
margin_bottom = 735.0
color = Color( 0.298039, 0.298039, 0.298039, 0.878431 )

[node name="TitleLabel2" type="Label" parent="TitleScene"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -309.0
margin_top = 271.0
margin_right = 988.0
margin_bottom = 397.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "S to Start, T for Tutorial"

[node name="DrivingScene" type="CanvasLayer" parent="."]
visible = false

[node name="Carwindshield" type="Sprite" parent="DrivingScene"]
position = Vector2( 512, 384 )
scale = Vector2( 0.244, 0.244 )
texture = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="DrivingScene"]
position = Vector2( 512, 383 )
scale = Vector2( 0.244, 0.244 )
frames = SubResource( 5 )
animation = "driver_2"

[node name="TitleBackground" type="TextureRect" parent="DrivingScene"]
visible = false
show_behind_parent = true
margin_right = 1024.0
margin_bottom = 768.0
rect_scale = Vector2( 0.244, 0.244 )
texture = ExtResource( 8 )
stretch_mode = 5

[node name="TalkingScene" type="CanvasLayer" parent="."]
visible = false

[node name="LeftColorRect2" type="ColorRect" parent="TalkingScene"]
margin_left = 704.0
margin_top = 199.0
margin_right = 1008.0
margin_bottom = 430.0
color = Color( 0.117647, 0.0705882, 0.0705882, 0.560784 )

[node name="CharacterSprite" type="AnimatedSprite" parent="TalkingScene"]
position = Vector2( 862, 315 )
scale = Vector2( 0.12, 0.12 )
frames = SubResource( 1 )
animation = "char_0"

[node name="DossierScene" type="CanvasLayer" parent="."]
visible = false

[node name="DossierBackground" type="ColorRect" parent="DossierScene"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -971.0
margin_top = -367.0
margin_right = 53.0
margin_bottom = 51.0
rect_scale = Vector2( 0.9, 0.9 )
color = Color( 0.0352941, 0.0313726, 0.0313726, 0.509804 )

[node name="TalkingBackground" type="ColorRect" parent="DossierScene"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -971.0
margin_top = -367.0
margin_right = 53.0
margin_bottom = 51.0
rect_scale = Vector2( 0.9, 0.9 )
color = Color( 0.0352941, 0.0313726, 0.0313726, 0.509804 )

[node name="LeftColorRect" type="ColorRect" parent="DossierScene"]
margin_left = 94.0
margin_top = 48.0
margin_right = 456.0
margin_bottom = 365.0
color = Color( 1, 1, 1, 0.266667 )

[node name="RightColorRect" type="ColorRect" parent="DossierScene"]
margin_left = 572.0
margin_top = 52.0
margin_right = 934.0
margin_bottom = 369.0
color = Color( 1, 1, 1, 0.266667 )

[node name="LeftSprite" type="AnimatedSprite" parent="DossierScene"]
position = Vector2( 271, 214 )
scale = Vector2( 0.19, 0.19 )
frames = SubResource( 1 )
animation = "char_0"

[node name="RightSprite" type="AnimatedSprite" parent="DossierScene"]
position = Vector2( 755, 214 )
scale = Vector2( 0.19, 0.19 )
frames = SubResource( 1 )
animation = "char_0"

[node name="HUD" type="CanvasLayer" parent="."]
visible = false
script = ExtResource( 10 )

[node name="ScoreBox" type="ColorRect" parent="HUD"]
margin_left = 707.0
margin_top = 9.0
margin_right = 1011.0
margin_bottom = 187.0
color = Color( 0, 0, 0, 1 )

[node name="ScoreLabel" type="Label" parent="HUD"]
margin_left = 734.0
margin_top = 39.0
margin_right = 862.0
margin_bottom = 134.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="FareLabel" type="Label" parent="HUD"]
margin_left = 745.0
margin_top = 126.0
margin_right = 858.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 4 )
text = "Fare"
align = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="Strike1" type="Label" parent="HUD"]
visible = false
margin_left = 865.0
margin_top = 50.0
margin_right = 958.0
margin_bottom = 132.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
text = "X"
align = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="Strike2" type="Label" parent="HUD"]
visible = false
margin_left = 918.0
margin_top = 52.0
margin_right = 1011.0
margin_bottom = 134.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
text = "X"
align = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="StrikesLabel" type="Label" parent="HUD"]
margin_left = 882.0
margin_top = 126.0
margin_right = 995.0
margin_bottom = 207.0
custom_fonts/font = SubResource( 4 )
text = "Strikes"
align = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="EndScene" type="CanvasLayer" parent="."]
visible = false

[node name="EndBackground" type="TextureRect" parent="EndScene"]
margin_right = 4200.0
margin_bottom = 3149.0
rect_scale = Vector2( 0.244, 0.244 )
texture = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="EndScene"]
margin_left = 5.0
margin_top = 13.0
margin_right = 229.0
margin_bottom = 168.0
color = Color( 0.298039, 0.298039, 0.298039, 0.878431 )

[node name="TitleLabel" type="Label" parent="EndScene"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -508.0
margin_top = -356.0
margin_right = -289.0
margin_bottom = -230.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "END"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -24.761
autoplay = true
